package adapter.classadapter;

/**
 * @author YangLiuQing
 * @date 2020/6/7 17:15
 * 适配接口
 */
public interface IVoltage5V {

    public int output5V();
}
